feat(UI): add gradient to date label and refactor table view setup

--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -16,11 +16,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ggg-yT-2yl" userLabel="ImagesList">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ggg-yT-2yl" userLabel="ImagesList">
                                 <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" name="YP Black"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="370" id="Vvf-Dn-nDT" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="2" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="370" id="Vvf-Dn-nDT" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="370"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Vvf-Dn-nDT" id="HYl-Eg-7D7">
@@ -51,15 +51,22 @@
                                                     <color key="textColor" name="YP White"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p1T-wQ-gfV">
+                                                    <rect key="frame" x="16" y="336" width="361" height="30"/>
+                                                </view>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="uwz-fM-SGh" firstAttribute="leading" secondItem="HYl-Eg-7D7" secondAttribute="leading" constant="16" id="3nH-Am-BPF"/>
                                                 <constraint firstAttribute="bottom" secondItem="uwz-fM-SGh" secondAttribute="bottom" constant="4" id="AY8-kv-WOD"/>
+                                                <constraint firstItem="uwz-fM-SGh" firstAttribute="trailing" secondItem="p1T-wQ-gfV" secondAttribute="trailing" id="DWy-FC-gv7"/>
                                                 <constraint firstItem="uwz-fM-SGh" firstAttribute="leading" secondItem="Wdp-t1-F0f" secondAttribute="leading" constant="-8" id="EH7-FX-rn9"/>
+                                                <constraint firstItem="uwz-fM-SGh" firstAttribute="leading" secondItem="p1T-wQ-gfV" secondAttribute="leading" id="Lv8-J7-10U"/>
                                                 <constraint firstItem="uwz-fM-SGh" firstAttribute="trailing" secondItem="7O8-Qm-5yI" secondAttribute="trailing" id="U7B-ZZ-4Nr"/>
                                                 <constraint firstItem="uwz-fM-SGh" firstAttribute="top" secondItem="HYl-Eg-7D7" secondAttribute="top" constant="4" id="X7d-DL-Bac"/>
+                                                <constraint firstItem="uwz-fM-SGh" firstAttribute="bottom" secondItem="p1T-wQ-gfV" secondAttribute="bottom" id="XxY-9C-mQy"/>
                                                 <constraint firstAttribute="trailing" secondItem="uwz-fM-SGh" secondAttribute="trailing" constant="16" id="Ybc-uD-wtC"/>
                                                 <constraint firstItem="uwz-fM-SGh" firstAttribute="bottom" secondItem="Wdp-t1-F0f" secondAttribute="bottom" constant="8" id="a5B-OO-uYL"/>
+                                                <constraint firstItem="p1T-wQ-gfV" firstAttribute="height" secondItem="Wdp-t1-F0f" secondAttribute="height" multiplier="1.875" id="k5u-h0-YOZ"/>
                                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Wdp-t1-F0f" secondAttribute="trailing" constant="20" symbolic="YES" id="oIu-tW-HRu"/>
                                                 <constraint firstItem="uwz-fM-SGh" firstAttribute="top" secondItem="7O8-Qm-5yI" secondAttribute="top" id="oVq-9K-zl3"/>
                                             </constraints>
@@ -67,6 +74,7 @@
                                         <color key="backgroundColor" name="YP Black"/>
                                         <connections>
                                             <outlet property="dateLabel" destination="Wdp-t1-F0f" id="gWz-FK-0fO"/>
+                                            <outlet property="gradientView" destination="p1T-wQ-gfV" id="XCp-rp-PDC"/>
                                             <outlet property="likeButton" destination="7O8-Qm-5yI" id="GST-Aa-LuU"/>
                                             <outlet property="photoImageView" destination="uwz-fM-SGh" id="Jgn-3D-Jg6"/>
                                         </connections>
